test/fail/vt_01.v3
//@execute = 165
type vt_01a { case M; case N;}
def main() -> int {
	var x: vt_01a = vt_01a.M;
	var y: vt_01a = vt_01a.N;
	return 165;
}
